--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Paul Theme
-Text Domain: paultheme
+Theme Name: my-wordpress-theme
+Text Domain: My Wordpress Theme
 Version: 0.1
 Requires at least: 4.7
 Requires PHP: 5.2.4
