--- a/style.css
+++ b/style.css
@@ -18,4 +18,13 @@ with others.
 
 /* @import url("../twentytwenty/style.css"); */
 
-body{ background-color: black;}
+body{
+  background-color: grey;
+
+}
+
+header{
+  background-color: white;
+  width:100%;
+  height:100px;
+}
