--- a/style.css
+++ b/style.css
@@ -28,3 +28,15 @@ header{
   width:100%;
   height:100px;
 }
+
+
+.navigation a {
+    color:black;
+
+}
+
+.navigation a:hover{
+      background-color: grey;
+      color:white;
+
+}
