--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: my-wordpress-theme
-Text Domain: My Wordpress Theme
-Version: 0.1
+Text Domain: mywordpresstheme
+Version: 0.2
 Requires at least: 4.7
 Requires PHP: 5.2.4
 
@@ -27,6 +27,7 @@ header{
   background-color: white;
   width:100%;
   height:100px;
+  padding: 20px;
 }
 
 
